# MetaMut

./: .gitignore  README.md  README.ubuntu.md  _config.yml  bugs.md  index.html  setup.sh
Core/: .gitignore  CMakeLists.txt  main.cpp
Core/cmake/: string_to_list.cmake
Core/include/: Mutator.h  MutatorManager.h  base64.h  json.hpp
Core/lib/: Mutator.cpp  MutatorManager.cpp
Core/lib/examples/: ChangeBinop.cpp  Test.cpp
Core/scripts/: analyzeGenerationCost.py  analyzeGoalValidation.py  configs.py  main.py  transformLogFormat.py
Core/scripts/llm/: APISwitch.py  Exceptions.py  HttpsOpenai.py  OpenaiUtils.py  PythonOpenai.py  ReplayAPI.py
Core/scripts/metamut/: Driver.py  Mutator.py  MutatorExecutor.py  MutatorGenerator.py  ResponseParser.py
Core/scripts/utils/: ShellProcess.py  gdb.py
Core/stages/: Example-1.txt  ImplementMutator-1.txt  InventMutator-1.txt  RefineMutator-1.txt
Core/stages/notes/: APIs.txt  ChangeDeclRef.cpp  ImplNotes.txt
fuzzer/: configs.py  run.py  show.py
fuzzer/lib/: BugInst.py  Fuzzer.py  (+13 more)
instrumenter/: .gitignore  CMakeLists.txt  dynamic_list.txt
mutators/: .gitignore  CMakeLists.txt  main.cpp
mutators/cmake/: find_llvm.cmake
mutators/include/: ClangWrapper.h  MutationServer.h  Mutator.h  MutatorManager.h  backward.h  utils.h
mutators/include/fmt/: fmtlog-inl.h  fmtlog.h
mutators/lib/: CorrectUndefinedBehavior.cpp  Mutator.cpp  MutatorManager.cpp  fmtlog.cpp  utils.cpp
mutators/lib/examples/: ChangeBinop.cpp  ChangeDeclRef.cpp  Test.cpp
mutators/logs/duplicate/: M0.txt  M1.txt  M2.txt
mutators/logs/insufficient-tests/: M0.txt  M1.txt  M2.txt  M3.txt  M4.txt  M5.txt  M6.txt  M7.txt  M8.txt  M9.txt
mutators/logs/mismatch/: M0.txt  M1.txt  M2.txt  M3.txt  M4.txt  M5.txt  M6.txt
mutators/logs/network/: M0.txt  M1.txt  M10.txt  M11.txt  M12.txt  M13.txt  M14.txt  M15.txt  M16.txt  M17.txt  M18.txt  M19.txt  M2.txt  M20.txt  M21.txt  M22.txt  M23.txt  M3.txt  M4.txt  M5.txt  M6.txt  M7.txt  M8.txt  M9.txt
mutators/logs/valid/: M0.txt  M1.txt  M10.txt  M11.txt  M12.txt  M13.txt  M14.txt  M15.txt  M16.txt  M17.txt  M18.txt  M19.txt  M2.txt  M20.txt  M21.txt  M22.txt  M23.txt  M24.txt  M25.txt  M26.txt  M27.txt  M28.txt  M29.txt  M3.txt  M30.txt  M31.txt  M32.txt  M33.txt  M34.txt  M35.txt  M36.txt  M37.txt  M38.txt  M39.txt  M4.txt  M40.txt  M41.txt  M42.txt  M43.txt  M44.txt  (+10 more)
mutators/logs/violate/: M0.txt  M1.txt  M2.txt  M3.txt  M4.txt  M5.txt
mutators/mu.s/: AddInitialization.cpp  AddSuffixUnaryOp.cpp  AggregateMemberToScalarVariable.cpp  ChangeCharLiteral.cpp  ChangeDeclRef.cpp  ChangeDeclType.cpp  ChangeFieldDeclType.cpp  ChangeFloatLiteral.cpp  ChangeIntegerLiteral.cpp  ChangeLoopType.cpp  ChangeParamScope.cpp  ChangeParmType.cpp  ChangeReturnType.cpp  ChangeReturnValue.cpp  ChangeVarDeclQualifier.cpp  ChangeVarDeclScope.cpp  CombineVariable.cpp  CopyExpr.cpp  CopyPropagation.cpp  DecayBodyToReturn.cpp  DecaySmallStruct.cpp  DestructRecord.cpp  DuplicateFields.cpp  DuplicateParameter.cpp  DuplicateStatement.cpp  DuplicateWithBinaryOp.cpp  DuplicateWithUnaryOp.cpp  FlattenArray.cpp  GroupStmtsIntoCompound.cpp  IfToGoto.cpp  IfToSwitch.cpp  IncreaseArrayDimension.cpp  IncreasePointerLevel.cpp  InlineFunctionReversal.cpp  LiftLogicalSubExpr.cpp  ModifyForLoopIncrement.cpp  MutateBinaryExprOpcode.cpp  MutateSuffixUnaryOp.cpp  MutateUnaryExprOpcode.cpp  NegateBranchCondition.cpp  (+28 more)
mutators/mu.u/: ConvertGlobalToLocal.cpp  ConvertIfToSwitch.cpp  DecayRandomArrayToPointer.cpp  DecayRandomFunctionToPointer.cpp  DecayRandomPointerToArray.cpp  DuplicateBranch.cpp  DuplicateRandomUnaryOperator.cpp  EmbedCompoundStmt.cpp  FlipLogicalOperator.cpp  InlineFunctionCall.cpp  InlineRandomVarDecl.cpp  InsertRandomBreakStmt.cpp  InsertRandomReturnStmt.cpp  InsertRandomSwitchStmt.cpp  InterchangeFuncCalls.cpp  IntroduceRandomTernaryOperator.cpp  InverseLogicalExpr.cpp  InvertFunctionCondition.cpp  InvertRelationalOperator.cpp  LiftNestedFunction.cpp  ModifyFunctionReturnTypeToVoid.cpp  ModifyPointerTarget.cpp  ModifyRandomEnum.cpp  ModifyRandomLiteralInExpr.cpp  MutateVariableInitializationToRandomFunctionCall.cpp  NegateLiteral.cpp  RandomArrayElementAssign.cpp  RandomizeFunctionOrder.cpp  RandomizeIfElseBranches.cpp  RemoveRandomParameter.cpp  ReplaceIntWithEquivalentBitwiseExpr.cpp  ReplaceLiteralWithConstant.cpp  ReplaceLiteralWithRandomValue.cpp  ReplaceRandomCompoundAssignWithSeparate.cpp  ReplaceRandomExprWithNullptr.cpp  ReplaceRandomOperatorWithInverse.cpp  ReplaceRandomTypeWithTypedef.cpp  ReplaceSqrtWithFabs.cpp  ReplaceWhileWithDoWhile.cpp  ReplaceWithEquivalentUnaryExpr.cpp  (+10 more)
mutators/mu.u.v2/: AddBitwiseOperator.cpp  AddIntegerArray.cpp  AddNestedLoop.cpp  AddRandomAssignment.cpp  AddRandomConditionalExpr.cpp  AddRandomElementAccess.cpp  AddRandomFunctionAlias.cpp  AddRandomFunctionParam.cpp  AddRandomMemberFunction.cpp  AddRandomPointerArithmetic.cpp  AddRandomVariableMutation.cpp  AddReturnStmt.cpp  AddStringLiteralMutation.cpp  AddUnaryOperator.cpp  CopyRandomFieldDecl.cpp  DecayIntegerLiteral.cpp  DecayPointerType.cpp  DecomposeCompoundAssignment.cpp  DuplicateFunctionDecl.cpp  DuplicateIfStmt.cpp  ExtendLoopCondition.cpp  GroupConsecutiveIfStmts.cpp  GroupParameterAssignments.cpp  InlineArrayInitExpr.cpp  InsertCaseStmt.cpp  InsertRandomAttribute.cpp  InsertRandomBitwiseOperation.cpp  InsertRandomBreakStmt.cpp  InsertRandomControlFlowBranch.cpp  InsertRandomScopedBlock.cpp  InsertRandomVarDecl.cpp  IntroduceSwitchCaseFallthrough.cpp  IntroduceTypeConversion.cpp  InvertArrayInitOrder.cpp  InvertAssignmentOperator.cpp  InvertConditionInIfStmt.cpp  ModifyArrayInitialization.cpp  ModifyBuiltinFunctionArguments.cpp  ModifyInitExprValue.cpp  ModifyLoopStepSize.cpp  (+27 more)
seeds/: 00001.c  00008.c  00010.c  00011.c  00020.c  00027.c  00033.c  00039.c  00045.c  00050.c  00054.c  00062.c  00072.c  00086.c  00088.c  00092.c  00093.c  00097.c  00101.c  00111.c  00116.c  00120.c  00125.c  00127.c  00131.c  00132.c  00137.c  00138.c  00142.c  00149.c  00153.c  00154.c  00155.c  00163.c  00171.c  00177.c  00180.c  00184.c  00188.c  00198.c  (+5588 more)
(+20 files in other folders)
